<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="edu.lehigh.cse216.jbd321.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="Create New Message"
        app:showAsAction="never" />
    <item
        android:id="@+id/user_profile"
        android:orderInCategory="100"
        android:title="User Profile"
        app:showAsAction="never" />
    <item
        android:id="@+id/logout"
        android:orderInCategory="100"
        android:title="Logout"
        app:showAsAction="never" />
</menu>
